syntax = "proto3";

package indexer;

// The IndexerManager service provides RPCs to manage Indexer instances
service IndexerManager {
    // Re-enable an existing Indexer
    rpc Enable (IndexerRequest) returns (IndexerResponse);

    // Disable an Indexer, preventing it from running
    rpc Disable (IndexerRequest) returns (IndexerResponse);
}

// Request message for managing Indexers
message IndexerRequest {
    // Account ID which the indexer is defined under
    string account_id = 1;
    // Name of the indexer
    string function_name = 2;
}

message IndexerResponse {
  bool success = 1;
  string message = 2;
}
